syntax = "proto3";

package hw;

service FirstGRPC {
    rpc FirstCall(FirstRequest) returns (FirstResponse) {}
}

message FirstRequest {
    string name = 1;
}

message FirstResponse {
    string message = 1;
}